// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProviderSelectDialog > Snapshots > renders correctly with default props 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                      │
│ ? Select LLM Provider                                                                                                │
│                                                                                                                      │
│   Which AI provider would you like to use?                                                                           │
│                                                                                                                      │
│   (selected) Gemini (Googl(not selected) Claude       (not selected) OpenAI    (not selected) sLM (Self-hosted /     │
│   AI)                     (Anthropic)                 (OpenAI)                 Local LLM)                            │
│                                                                                                                      │
│   (Use Enter to select)                                                                                              │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`ProviderSelectDialog > Snapshots > renders correctly with error 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                      │
│ ? Select LLM Provider                                                                                                │
│                                                                                                                      │
│   Which AI provider would you like to use?                                                                           │
│                                                                                                                      │
│   (selected) Gemini (Googl(not selected) Claude       (not selected) OpenAI    (not selected) sLM (Self-hosted /     │
│   AI)                     (Anthropic)                 (OpenAI)                 Local LLM)                            │
│                                                                                                                      │
│   Must select a provider                                                                                             │
│                                                                                                                      │
│   (Use Enter to select)                                                                                              │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;
